# advoid

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  README_ja.md
docs/hickory-dns/: response-building.md  tcp-listener.md
docs/rfc-violations/: 01-high-nxdomain-missing-soa.done.md  02-high-error-response-query-id-zero.done.md  03-medium-blocklist-suffix-match-no-label-boundary.done.md  04-medium-edns-dnssec-ok-flag-unconditional.md  05-medium-edns-max-payload-echoes-client.done.md  06-medium-nxdomain-missing-aa-flag.md  07-medium-no-tcp-support.md  08-medium-unbounded-domain-cache.done.md  09-low-rfc6303-soa-ns-queries-return-nxdomain.done.md  10-low-ra-flag-not-set-on-blocked-responses.md  11-low-client-rd-flag-not-forwarded.done.md  12-low-dnssec-records-dropped-from-forwarded-responses.done.md
src/: blocklist.rs  dns.rs  event.rs  lib.rs  main.rs  metrics.rs  sink.rs  trace.rs
src/event/: channel.rs  databricks.rs  mod.rs  s3.rs  stub.rs  worker.rs
