[package]
name = "advoid"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
rustc-hash = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.uuid]
version = "1"
features = ["v7", "serde"]

[dependencies.aws-config]
version = "1"

[dependencies.aws-sdk-s3]
version = "1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls-webpki-roots", "json"]

[dependencies.hickory-proto]
version = "0.25"

[dependencies.hickory-server]
version = "0.25"

[dependencies.hickory-client]
version = "0.25"
default-features = false

[dependencies.clap]
version = "4"
features = ["derive", "env"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"

[dependencies.axum]
version = "0.8"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-opentelemetry]
version = "0.32"
default-features = false
features = ["tracing-log", "metrics"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["std", "env-filter", "time", "local-time"]

[dependencies.opentelemetry]
version = "0.31"
default-features = false
features = ["trace", "metrics"]

[dependencies.opentelemetry_sdk]
version = "0.31"
features = ["rt-tokio", "trace", "metrics"]

[dependencies.opentelemetry-otlp]
version = "0.31"
default-features = false
features = ["grpc-tonic", "trace", "metrics"]

[dependencies.metrics]
version = "0.24"
default-features = false

[dependencies.metrics-exporter-prometheus]
version = "0.18"
default-features = false

[profile.release]
codegen-units = 1
lto = true
strip = true
